# mulligan-simulator

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  init.sql  pyproject.toml  pytest.ini  setup_db.py
alembic/: env.py
alembic/versions/: 001_initial_migration.py
examples/: env.example  example_deck.txt  example_usage.py
mulligan_simulator/: __init__.py  cli.py  database.py  db_cli.py  db_init.py  db_service.py  models.py  simulator.py
tests/: __init__.py  conftest.py  test_cli.py  test_database.py  test_models.py  test_simulator.py
